kubernetes/minikube/1-gateway-service/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ithust-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ithust-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ithust-gateway
    spec:
      containers:
        - name: ithust-gateway
          image: minhkhoi779/ithust-gateway:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 120Mi
          ports:
            - name: gateway
              containerPort: 4000
