kubernetes/minikube/1-gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ithust-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: ithust-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
